# type3-runtime

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
ci/: Dockerfile.build-alpine-latest-x86_64  Dockerfile.build-alpine-latest-x86_64-clang  Dockerfile.build-ubuntu-xenial-x86_64  build-in-docker.sh  build.sh
cmake/: dependencies.cmake  reproducible_builds.cmake  tools.cmake
cmake/toolchains/: i386.cmake
include/: appimage-header.h
include/appimage/type3/: appimage-header.h
lib/: CMakeLists.txt
patches/squashfuse/: dynamic_fuse.patch  patch-squashfuse.sh.in
src/: CMakeLists.txt  magic_bytes.ld  runtime.c
src/commands/: commands.h
src/header/: CMakeLists.txt  appimage-header.c
src/runtime/: CMakeLists.txt  runtime.c
tests/: CMakeLists.txt  test_appimage_header.cpp  test_appimage_magic_bytes.sh  test_appimage_section.c
